--- a/changelog_unreleased/typescript/11721.md
+++ b/changelog_unreleased/typescript/11721.md
@@ -1,6 +1,6 @@
 #### [HIGHLIGHT]Support TypeScript 4.5 (#11721, #11723, #11813 by @sosukesuzuki)
 
-Support new TypeScript 4.5 features.
+We’ve added support for new syntax features in TypeScript 4.5:
 
 ##### [`type` Modifiers on Import Names](https://devblogs.microsoft.com/typescript/announcing-typescript-4-5/#type-on-import-names)
 
