--- a/changelog_unreleased/mdx/11563.md
+++ b/changelog_unreleased/mdx/11563.md
@@ -1,6 +1,6 @@
 #### [HIGHLIGHT]Add support for MDX 2 comments (#11563 by @wooorm)
 
-This adds basic support for MDX 2 comments (JavaScript-style comments) in addition to existing MDX 1 comments (HTML-style comments).
+This adds basic support for MDX v2 comment syntax (JavaScript-style comments) in addition to the existing support MDX v1 comment syntax (HTML-style comments).
 
 Note that in MDX 2, more complex comments and whole expressions can be used inside braces.
 This currently only supports a single comment on one line so that `{/* prettier-ignore */}` can be used, but doesn’t support most of MDX 2.
