--- a/changelog_unreleased/mdx/11563.md
+++ b/changelog_unreleased/mdx/11563.md
@@ -2,8 +2,7 @@
 
 This adds basic support for MDX v2 comment syntax (JavaScript-style comments) in addition to the existing support MDX v1 comment syntax (HTML-style comments).
 
-Note that in MDX 2, more complex comments and whole expressions can be used inside braces.
-This currently only supports a single comment on one line so that `{/* prettier-ignore */}` can be used, but doesn’t support most of MDX 2.
+**Note**: Prettier currently only supports the new comment syntax for single-line comments (so that `{/* prettier-ignore */}` can be used), and doesn’t support the rest of MDX v2.
 
 <!-- prettier-ignore -->
 ```mdx
