--- a/website/blog/2021-11-21-2.5.0.md
+++ b/website/blog/2021-11-21-2.5.0.md
@@ -152,7 +152,7 @@ Prettier 2.5:
 
 #### Fix parentheses around sequence expression as body of arrow chain ([#11593](https://github.com/prettier/prettier/pull/11593) by [@bakkot](https://github.com/bakkot))
 
-The required parentheses around sequence expressions as the body of arrow functions were dropped for chained arrows, causing incorrect code to be generated. Now they are included.
+The required parentheses around sequence expressions as the body of arrow functions are now preserved for chained arrows. Previously, Prettier removed them, which resulted in invalid syntax.
 
 <!-- prettier-ignore -->
 ```jsx
