--- a/website/blog/2021-11-21-2.5.0.md
+++ b/website/blog/2021-11-21-2.5.0.md
@@ -168,6 +168,8 @@ const f = () => () => (0, 1);
 
 #### Ignore errors for sloppy mode syntax ([#11750](https://github.com/prettier/prettier/pull/11750) by [@fisker](https://github.com/fisker), [#11778](https://github.com/prettier/prettier/pull/11778) by [@sosukesuzuki](https://github.com/sosukesuzuki))
 
+JavaScript’s [strict mode](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Strict_mode) adds several useful errors to prevent mistakes. Some of these errors are syntax errors that occur at parse time. Since Prettier’s goal is to format all syntactically valid JavaScript code regardless of whether it will actually run, we’ve opted to leave this error checking to linters, compilers, and the runtime.
+
 <!-- prettier-ignore -->
 ```jsx
 // Input
