--- a/changelog_unreleased/javascript/11800.md
+++ b/changelog_unreleased/javascript/11800.md
@@ -1,22 +1,23 @@
 #### Respect spacing for between expressions and parentheses in embedded CSS (#11800 by @sosukesuzuki)
 
-<!-- Optional description if it makes sense. -->
-
 <!-- prettier-ignore -->
 ```jsx
 // Input
 const paragraph2 = css`
-  transform: ${expr}(30px);
+  transform1: ${expr}(30px);
+  transform2: ${expr} (30px);
 `;
 
-// Prettier stable
+// Prettier 2.4
 const paragraph2 = css`
-  transform: ${expr} (30px);
+  transform1: ${expr} (30px);
+  transform2: ${expr} (30px);
 `;
 
-// Prettier main
+// Prettier 2.5
 const paragraph2 = css`
-  transform: ${expr}(30px);
+  transform1: ${expr}(30px);
+  transform2: ${expr} (30px);
 `;
 
 ```
