--- a/changelog_unreleased/markdown/11685.md
+++ b/changelog_unreleased/markdown/11685.md
@@ -1,6 +1,6 @@
 #### Keep trailing commas for type parameters in embedded TSX (#11685 by @sosukesuzuki)
 
-<!-- Optional description if it makes sense. -->
+The trailing comma is necessary to prevent TypeScript from treating the `<T>` as the beginning of a JSX expression.
 
 <!-- prettier-ignore -->
 ````md
