--- a/changelog_unreleased/javascript/11593.md
+++ b/changelog_unreleased/javascript/11593.md
@@ -1,6 +1,6 @@
 #### Fix parentheses around sequence expression as body of arrow chain (#11593 by @bakkot)
 
-The required parentheses around sequence expressions as the body of arrow functions were dropped for chained arrows, causing incorrect code to be generated. Now they are included.
+The required parentheses around sequence expressions as the body of arrow functions are now preserved for chained arrows. Previously, Prettier removed them, which resulted in invalid syntax.
 
 <!-- prettier-ignore -->
 ```jsx
