--- a/changelog_unreleased/javascript/11750.md
+++ b/changelog_unreleased/javascript/11750.md
@@ -1,5 +1,7 @@
 #### Ignore errors for sloppy mode syntax (#11750 by @fisker, #11778 by @sosukesuzuki)
 
+JavaScript’s [strict mode](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Strict_mode) adds several useful errors to prevent mistakes. Some of these errors are syntax errors that occur at parse time. Since Prettier’s goal is to format all syntactically valid JavaScript code regardless of whether it will actually run, we’ve opted to leave this error checking to linters, compilers, and the runtime.
+
 <!-- prettier-ignore -->
 ```jsx
 // Input
