--- a/changelog_unreleased/javascript/11835.md
+++ b/changelog_unreleased/javascript/11835.md
@@ -2,7 +2,7 @@
 
 <!-- prettier-ignore -->
 ```jsx
-// Input
+// Example
 class Foo {
   #brand;
   static isC(obj) {
@@ -10,20 +10,4 @@ class Foo {
   }
 }
 
-// Prettier stable
-SyntaxError: Unexpected token #brand (4:12)
-  2 |   #brand;
-  3 |   static isC(obj) {
-> 4 |     return #brand in Foo;
-    |            ^
-  5 |   }
-  6 | }
-
-// Prettier main
-class Foo {
-  #brand;
-  static isC(obj) {
-    return #brand in Foo;
-  }
-}
 ```
