--- a/changelog_unreleased/typescript/11721.md
+++ b/changelog_unreleased/typescript/11721.md
@@ -6,13 +6,7 @@ We’ve added support for new syntax features in TypeScript 4.5:
 
 <!-- prettier-ignore -->
 ```ts
-// Input
-import { type A } from "mod";
-
-// Prettier stable
-SyntaxError: ',' expected. (1:15)
-
-// Prettier main
+// Example
 import { type A } from "mod";
 
 ```
@@ -21,25 +15,7 @@ import { type A } from "mod";
 
 <!-- prettier-ignore -->
 ```ts
-// Input
-class Foo {
-  #prop1;
-  method() {
-    return #prop1 in this;
-  }
-}
-
-// Prettier stable
-SyntaxError: Private identifiers are not allowed outside class bodies. (4:12)
-  2 |   #prop1;
-  3 |   method() {
-> 4 |     return #prop1 in this;
-    |            ^
-  5 |   }
-  6 | }
-  7 |
-
-// Prettier main
+// Example
 class Foo {
   #prop1;
   method() {
@@ -53,16 +29,7 @@ class Foo {
 
 <!-- prettier-ignore -->
 ```ts
-// Input
-import obj from "./something.json" assert { type: "json" };
-
-// Prettier stable
-SyntaxError: ';' expected. (1:36)
-> 1 | import obj from "./something.json" assert { type: "json" };
-    |                                    ^
-  2 |
-
-// Prettier main
+// Example
 import obj from "./something.json" assert { type: "json" };
 
 ```
