--- a/changelog_unreleased/html/11827.md
+++ b/changelog_unreleased/html/11827.md
@@ -1,4 +1,8 @@
-#### Reverts #7865, keeping class names on the same line (#11827 by @jlongster)
+#### [HIGHLIGHT]Collapse HTML `class` attributes onto one line (#11827 by @jlongster)
+
+Reverts [#7865](https://github.com/prettier/prettier/pull/7865).
+
+While this was intended to be useful for users of CSS libraries like Tailwind that tend to result in large numbers of classes on elements, it became clear that our heuristics for where to split the class list on to multiple lines were unable to consistently produce good results. We’re still considering better ways to format HTML with lots of classes — consider [discussing with us](https://github.com/prettier/prettier/issues/7863).
 
 <!-- prettier-ignore -->
 ```html
