--- a/website/blog/2021-11-22-2.5.0.md
+++ b/website/blog/2021-11-22-2.5.0.md
@@ -92,6 +92,39 @@ import obj from "./something.json" assert { type: "json" };
 
 Handle new file extensions `.mts` and `.cts`.
 
+### HTML
+
+#### Collapse HTML `class` attributes onto one line ([#11827](https://github.com/prettier/prettier/pull/11827) by [@jlongster](https://github.com/jlongster))
+
+Reverts [#7865](https://github.com/prettier/prettier/pull/7865).
+
+While this was intended to be useful for users of CSS libraries like Tailwind that tend to result in large numbers of classes on elements, it became clear that our heuristics for where to split the class list on to multiple lines were unable to consistently produce good results. We’re still considering better ways to format HTML with lots of classes — consider [discussing with us](https://github.com/prettier/prettier/issues/7863).
+
+<!-- prettier-ignore -->
+```html
+<!-- Input -->
+<div
+  class="SomeComponent__heading-row d-flex flex-column flex-lg-row justify-content-start justify-content-lg-between align-items-start align-items-lg-center"
+></div>
+
+<!-- Prettier 2.4 -->
+<div
+  class="
+    SomeComponent__heading-row
+    d-flex
+    flex-column flex-lg-row
+    justify-content-start justify-content-lg-between
+    align-items-start align-items-lg-center
+  "
+></div>
+
+<!-- Prettier 2.5 -->
+<div
+  class="SomeComponent__heading-row d-flex flex-column flex-lg-row justify-content-start justify-content-lg-between align-items-start align-items-lg-center"
+></div>
+
+```
+
 ### MDX
 
 #### Add support for MDX 2 comments ([#11563](https://github.com/prettier/prettier/pull/11563) by [@wooorm](https://github.com/wooorm))
@@ -263,35 +296,6 @@ TypeError: Cannot read properties of undefined (reading 'type')
 @forward "foo.scss" with (
   $components: red
 );
-
-```
-
-### HTML
-
-#### Reverts [#7865](https://github.com/prettier/prettier/pull/7865), keeping class names on the same line ([#11827](https://github.com/prettier/prettier/pull/11827) by [@jlongster](https://github.com/jlongster))
-
-<!-- prettier-ignore -->
-```html
-<!-- Input -->
-<div
-  class="SomeComponent__heading-row d-flex flex-column flex-lg-row justify-content-start justify-content-lg-between align-items-start align-items-lg-center"
-></div>
-
-<!-- Prettier 2.4 -->
-<div
-  class="
-    SomeComponent__heading-row
-    d-flex
-    flex-column flex-lg-row
-    justify-content-start justify-content-lg-between
-    align-items-start align-items-lg-center
-  "
-></div>
-
-<!-- Prettier 2.5 -->
-<div
-  class="SomeComponent__heading-row d-flex flex-column flex-lg-row justify-content-start justify-content-lg-between align-items-start align-items-lg-center"
-></div>
 
 ```
 
