--- a/changelog_unreleased/typescript/11721.md
+++ b/changelog_unreleased/typescript/11721.md
@@ -36,4 +36,4 @@ import obj from "./something.json" assert { type: "json" };
 
 ##### Handle `.mts` and `.cts`
 
-Handle new file extensions `.mts` and `.cts`.
+Prettier will now format files with `.mts` and `.cts` extensions as TypeScript.
