MDX 2 comments => MDX v2 comment syntax

--- a/changelog_unreleased/mdx/11563.md
+++ b/changelog_unreleased/mdx/11563.md
@@ -1,4 +1,4 @@
-#### [HIGHLIGHT]Add support for MDX 2 comments (#11563 by @wooorm)
+#### [HIGHLIGHT]Add support for MDX v2 comment syntax (#11563 by @wooorm)
 
 This adds basic support for MDX v2 comment syntax (JavaScript-style comments) in addition to the existing support MDX v1 comment syntax (HTML-style comments).
 
