--- a/website/blog/2021-11-22-2.5.0.md
+++ b/website/blog/2021-11-22-2.5.0.md
@@ -1,10 +1,10 @@
 ---
 author: "Sosuke Suzuki (@sosukesuzuki)"
 authorURL: "https://github.com/sosukesuzuki"
-title: "Prettier 2.5: TypeScript 4.5 and MDX 2 comments!"
+title: "Prettier 2.5: TypeScript 4.5 and MDX v2 comment syntax!"
 ---
 
-This release adds support for [TypeScript 4.5](https://devblogs.microsoft.com/typescript/announcing-typescript-4-5/) new syntax and [MDX 2](https://mdxjs.com/blog/v2/) comments!
+This release adds support for [TypeScript 4.5](https://devblogs.microsoft.com/typescript/announcing-typescript-4-5/) new syntax and [MDX v2](https://mdxjs.com/blog/v2/) comment syntax!
 
 If you enjoy Prettier and would like to support our work, consider sponsoring us directly via [our OpenCollective](https://opencollective.com/prettier) or by sponsoring the projects we depend on, including [typescript-eslint](https://opencollective.com/typescript-eslint), [remark](https://opencollective.com/unified), and [Babel](https://opencollective.com/babel).
 
@@ -127,7 +127,7 @@ While this was intended to be useful for users of CSS libraries like Tailwind th
 
 ### MDX
 
-#### Add support for MDX 2 comments ([#11563](https://github.com/prettier/prettier/pull/11563) by [@wooorm](https://github.com/wooorm))
+#### Add support for MDX v2 comment syntax ([#11563](https://github.com/prettier/prettier/pull/11563) by [@wooorm](https://github.com/wooorm))
 
 This adds basic support for MDX v2 comment syntax (JavaScript-style comments) in addition to the existing support MDX v1 comment syntax (HTML-style comments).
 
