--- a/website/blog/2021-11-24-2.5.0.md
+++ b/website/blog/2021-11-24-2.5.0.md
@@ -16,7 +16,7 @@ If you enjoy Prettier and would like to support our work, consider sponsoring us
 
 #### Avoid extra offset in arrow function body when using long types ([#11515](https://github.com/prettier/prettier/pull/11515) by [@kachkaev](https://github.com/kachkaev) and [@thorn0](https://github.com/thorn0))
 
-Starting with Prettier 2.3.0, type declarations in arrow functions could affect function body offset. Changing the length of the type annotation could produce large diffs and thus increased the chance of git conflicts. To prevent this, function body offset was stabilized.<br>
+Starting with Prettier 2.3.0, type declarations in arrow functions could affect function body indentation. Changing the length of the type annotation could produce large diffs and thus increased the chance of git conflicts. To prevent this, function body offset was stabilized.<br>
 **Note**: This change may affect a large number of lines in your codebase.
 
 <!-- prettier-ignore -->
@@ -54,7 +54,7 @@ const MyComponentWithLongName: React.VoidFunctionComponent<
 
 #### Support TypeScript 4.5 ([#11721](https://github.com/prettier/prettier/pull/11721), [#11723](https://github.com/prettier/prettier/pull/11723), [#11813](https://github.com/prettier/prettier/pull/11813) by [@sosukesuzuki](https://github.com/sosukesuzuki))
 
-We’ve added support for TypeScript 4.5's new syntax features:
+We’ve added support for TypeScript 4.5’s new syntax features:
 
 ##### [`type` Modifiers on Import Names](https://devblogs.microsoft.com/typescript/announcing-typescript-4-5/#type-on-import-names)
 
