--- a/changelog_unreleased/scss/11637.md
+++ b/changelog_unreleased/scss/11637.md
@@ -5,17 +5,19 @@
 // Input
 @use 'library' with (
   $black: #222,
-  $border-radius: 0.1rem $font-family: 'Helvetica, sans-serif'
+  $border-radius: 0.1rem,
+  $font-family: 'Helvetica, sans-serif'
 );
 
 // Prettier stable
-@use 'library' with
-  ($black: #222, $border-radius: 0.1rem $font-family: 'Helvetica, sans-serif');
+@use "library" with
+  ($black: #222, $border-radius: 0.1rem, $font-family: "Helvetica, sans-serif");
 
 // Prettier main
 @use 'library' with (
   $black: #222,
-  $border-radius: 0.1rem $font-family: 'Helvetica, sans-serif'
+  $border-radius: 0.1rem,
+  $font-family: 'Helvetica, sans-serif'
 );
 
 ```
