--- a/changelog_unreleased/scss/11637.md
+++ b/changelog_unreleased/scss/11637.md
@@ -1,21 +1,23 @@
-#### Improve `with (...)` formatting (#11637 by @sosukesuzuki)
+#### Improve `@use with` formatting (#11637 by @sosukesuzuki)
 
 <!-- prettier-ignore -->
 ```scss
 // Input
 @use 'library' with (
   $black: #222,
-  $border-radius: 0.1rem $font-family: 'Helvetica, sans-serif'
+  $border-radius: 0.1rem,
+  $font-family: 'Helvetica, sans-serif'
 );
 
 // Prettier stable
-@use 'library' with
-  ($black: #222, $border-radius: 0.1rem $font-family: 'Helvetica, sans-serif');
+@use "library" with
+  ($black: #222, $border-radius: 0.1rem, $font-family: "Helvetica, sans-serif");
 
 // Prettier main
 @use 'library' with (
   $black: #222,
-  $border-radius: 0.1rem $font-family: 'Helvetica, sans-serif'
+  $border-radius: 0.1rem,
+  $font-family: 'Helvetica, sans-serif'
 );
 
 ```
