change docblock language

--- a/changelog_unreleased/handlebars/11899.md
+++ b/changelog_unreleased/handlebars/11899.md
@@ -5,7 +5,7 @@ Prettier already supported this feature, but it converted empty named blocks to 
 See: [Glimmer's named blocks](https://emberjs.github.io/rfcs/0460-yieldable-named-blocks.html).
 
 <!-- prettier-ignore -->
-```jsx
+```hbs
 // Input
 <Component>
   <:named></:named>
