--- a/changelog_unreleased/graphql/11733.md
+++ b/changelog_unreleased/graphql/11733.md
@@ -1,4 +1,4 @@
-#### Drop support for "comma separated interfaces" syntax (#11733 by @fisker)
+#### [Breaking] Drop support for "comma separated interfaces" syntax (#11733 by @fisker)
 
 <!-- prettier-ignore -->
 ```graphql
