--- a/changelog_unreleased/html/6644.md
+++ b/changelog_unreleased/html/6644.md
@@ -1,7 +1,6 @@
 #### Enforce Single Attribute Per Line (#6644 by @kankje)
 
-Added the `singleAttributePerLine` option for specifying if Prettier should
-enforce single attribute per line in HTML, Vue and JSX. Fixes #5501.
+Added the `singleAttributePerLine` option for specifying if Prettier should enforce single attribute per line in HTML, Vue and JSX. Fixes #5501.
 
 <!-- prettier-ignore -->
 ```html
@@ -21,7 +20,7 @@ enforce single attribute per line in HTML, Vue and JSX. Fixes #5501.
   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 </div>
 
-<!-- Prettier main, with option off (default) -->
+<!-- Prettier main, with `{"singleAttributePerLine": false}` -->
 <div data-a="1">
   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 </div>
@@ -29,7 +28,7 @@ enforce single attribute per line in HTML, Vue and JSX. Fixes #5501.
   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 </div>
 
-<!-- Prettier main, with option on -->
+<!-- Prettier main, with `{"singleAttributePerLine": true}` -->
 <div data-a="1">
   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 </div>
