Remove `Fix xxx`

--- a/changelog_unreleased/html/6644.md
+++ b/changelog_unreleased/html/6644.md
@@ -1,6 +1,6 @@
 #### Enforce Single Attribute Per Line (#6644 by @kankje)
 
-Added the `singleAttributePerLine` option for specifying if Prettier should enforce single attribute per line in HTML, Vue and JSX. Fixes #5501.
+Added the `singleAttributePerLine` option for specifying if Prettier should enforce single attribute per line in HTML, Vue and JSX.
 
 <!-- prettier-ignore -->
 ```html
