--- a/changelog_unreleased/css/9209.md
+++ b/changelog_unreleased/css/9209.md
@@ -27,7 +27,7 @@ SyntaxError: (postcss) CssSyntaxError Missed semicolon (3:20)
   5 | }
   6 |
 
-/* Prettier master */
+/* Prettier main */
 :root {
   --empty: ;
   --JSON: [1, "2", {"three": {"a": 1}}, [4]];
