--- a/changelog_unreleased/cli/10274.md
+++ b/changelog_unreleased/cli/10274.md
@@ -1,8 +1,6 @@
 #### Add `--no-plugin-search` to turn off plugin autoloading (#10274 by @fisker)
 
-To turn off plugin autoloading, use `{ pluginSearchDirs: false }` in JavaScript code or `--no-plugin-search` when using Prettier CLI.
-
-If you don't use any plugins, you can also add `{ pluginSearchDirs: false }` to your config file.
+To turn off plugin autoloading, use `{ pluginSearchDirs: false }` in JavaScript code or `--no-plugin-search` when using Prettier CLI. You can also add `{ pluginSearchDirs: false }` to your config file.
 
 <!-- prettier-ignore -->
 ```cli
