--- a/changelog_unreleased/javascript/12088.md
+++ b/changelog_unreleased/javascript/12088.md
@@ -1,4 +1,4 @@
-#### Inline `await` expressions in JSX (#12088 by @j-f1)
+#### Inline `await` expressions in JSX (#12088 & #12109 by @j-f1)
 
 `await` expressions in JSX are now inlined if their argument would be inlined.
 
@@ -9,6 +9,11 @@
   someVeryLongExpression
 )}
 
+{await (
+  <div>Lorem ipsum ...</div>
+)}
+
+
 // Prettier stable
 {
   await Promise.all(
@@ -16,8 +21,20 @@
   )
 }
 
+{
+  await (
+    <div>Lorem ipsum ...</div>
+  )
+}
+
+
 // Prettier main
 {await Promise.all(
   someVeryLongExpression
 )}
+
+{await (
+  <div>Lorem ipsum ...</div>
+)}
+
 ```
