fix 12087.md eslint error

--- a/changelog_unreleased/javascript/12087.md
+++ b/changelog_unreleased/javascript/12087.md
@@ -3,9 +3,9 @@
 ```js
 //--print-width=25
 // Input
-const a = foo == null ? bar: baz;
+const a = foo == null ? bar : baz;
 
-const b = !fooooooooo ? bar: baz;
+const b = !fooooooooo ? bar : baz;
 
 const x = {
   prop1: foo == null ? bar : baz,
@@ -13,45 +13,22 @@ const x = {
 };
 
 // Prettier stable
-const a =
-  foo == null
-    ? bar
-    : baz;
+const a = foo == null ? bar : baz;
 
-const b = !fooooooooo
-  ? bar
-  : baz;
+const b = !fooooooooo ? bar : baz;
 
 const x = {
-  prop1:
-    foo == null
-      ? bar
-      : baz,
-  prop1: !fooooooooo
-    ? bar
-    : baz,
+  prop1: foo == null ? bar : baz,
+  prop1: !fooooooooo ? bar : baz,
 };
 
-
 // Prettier main
-const a =
-  foo == null
-    ? bar
-    : baz;
+const a = foo == null ? bar : baz;
 
-const b =
-  !fooooooooo
-    ? bar
-    : baz;
+const b = !fooooooooo ? bar : baz;
 
 const x = {
-  prop1:
-    foo == null
-      ? bar
-      : baz,
-  prop1:
-    !fooooooooo
-      ? bar
-      : baz,
+  prop1: foo == null ? bar : baz,
+  prop1: !fooooooooo ? bar : baz,
 };
 ```
