--- a/changelog_unreleased/javascript/12087.md
+++ b/changelog_unreleased/javascript/12087.md
@@ -13,13 +13,21 @@ const x = {
 };
 
 // Prettier stable
-const a = foo == null ? bar : baz;
-
-const b = !fooooooooo ? bar : baz;
-
+const a =
+  foo == null
+    ? bar
+    : baz;
+const b = !fooooooooo
+  ? bar
+  : baz;
 const x = {
-  prop1: foo == null ? bar : baz,
-  prop1: !fooooooooo ? bar : baz,
+  prop1:
+    foo == null
+      ? bar
+      : baz,
+  prop1: !fooooooooo
+    ? bar
+    : baz,
 };
 
 // Prettier main
