--- a/changelog_unreleased/javascript/12087.md
+++ b/changelog_unreleased/javascript/12087.md
@@ -31,12 +31,22 @@ const x = {
 };
 
 // Prettier main
-const a = foo == null ? bar : baz;
-
-const b = !fooooooooo ? bar : baz;
-
+const a =
+  foo == null
+    ? bar
+    : baz;
+const b =
+  !fooooooooo
+    ? bar
+    : baz;
 const x = {
-  prop1: foo == null ? bar : baz,
-  prop1: !fooooooooo ? bar : baz,
+  prop1:
+    foo == null
+      ? bar
+      : baz,
+  prop1:
+    !fooooooooo
+      ? bar
+      : baz,
 };
 ```
