--- a/changelog_unreleased/javascript/12185.md
+++ b/changelog_unreleased/javascript/12185.md
@@ -1,4 +1,4 @@
-# Fix misplaced argument comment in abstract methods (#12185 by @duailibe)
+#### Fix misplaced argument comment in abstract methods (#12185 by @duailibe)
 
 <!-- prettier-ignore -->
 ```ts
