--- a/changelog_unreleased/css/12210.md
+++ b/changelog_unreleased/css/12210.md
@@ -4,7 +4,7 @@
 
 <!-- prettier-ignore -->
 ```css
-// Input
+/* Input */
 $colours: (
     "text": $light-100,
 
@@ -13,7 +13,7 @@ $colours: (
     "background-tertiary": $dark-100
 );
 
-// Prettier stable
+/* Prettier stable */
 $colours: (
   "text": $light-100,
   "background-primary": $dark-300,
@@ -21,7 +21,7 @@ $colours: (
   "background-tertiary": $dark-100
 );
 
-// Prettier main
+/* Prettier main */
 $colours: (
     "text": $light-100,
 
