--- a/tests/format/mdx/embedded-language-formatting/multiline-comments.mdx
+++ b/tests/format/mdx/embedded-language-formatting/multiline-comments.mdx
@@ -1,43 +1,40 @@
 # title
 
 {/* prettier-ignore-start */}
-const Hello = () => {
-   return (
-     <p>Hello!<p/>);
-}
+export const Test = () => {
+   return <p>test</p>;
+ };
+   <Test />
 {/* prettier-ignore-end */}
 
 {/* prettier-ignore-start */}
 
-const Hello = () => {
-   return (
-     <p>Hello!<p/>);
-}
+export const Test = () => {
+   return <p>test</p>;
+ };
+   <Test />
 {/* prettier-ignore-end */}
 
 {/* prettier-ignore-start */}
-const Hello = () => {
-   return (
-    <p>Hello!<p/>);
-}
+export const Test = () => {
+   return <p>test</p>;
+ };
+   <Test />
 
 {/* prettier-ignore-end */}
 
 {/* prettier-ignore-start */}
 
-const Hello = () => {
-   return (
-     <p>Hello!<p/>);
-}
-
- <Hello
-   />
+export const Test = () => {
+   return <p>test</p>;
+ };
+   <Test />
 
 {/* prettier-ignore-end */}
 
 <!-- prettier-ignore-start -->
-const Hello = () => {
-   return (
-     <p>Hello!<p/>);
-}
+export const Test = () => {
+   return <p>test</p>;
+ };
+   <Test />
 <!-- prettier-ignore-end -->
