--- a/changelog_unreleased/javascript/12280.md
+++ b/changelog_unreleased/javascript/12280.md
@@ -1,4 +1,4 @@
-#### Disable wrapping JSX fragments in parens (#12280 by @user)
+#### Disable wrapping JSX fragments in parens (#12280 by @j-f1)
 
 Removing parentheses around JSX `<>` fragments reduces the amount of indentation required for elements inside of them.
 
