--- a/changelog_unreleased/yaml/12305.md
+++ b/changelog_unreleased/yaml/12305.md
@@ -1,15 +1,15 @@
-#### Fix unexpected deletion of block-literal lines which starts with `\u3000` (#12305 by @Quramy)
+#### Fix unexpected deletion of block-literal lines which starts with U+3000 (#12305 by @Quramy)
 
 <!-- prettier-ignore -->
 ```yaml
 # Input 
 block_with_ideographic_space: |
-  　line-content # This line starts with \u3000
+  　line-content # This line starts with U+3000
 
 # Prettier stable
 block_with_ideographic_space: |
 
 // Prettier main
 block_with_ideographic_space: |
-  　line-content # This line starts with \u3000
+  　line-content # This line starts with U+3000
 ```
