Moved logic from normalizer to cli\index.js

--- a/changelog_unreleased/cli/12221.md
+++ b/changelog_unreleased/cli/12221.md
@@ -1,4 +1,4 @@
-#### Options normalizer now throws an error if both config and no-config arguments are passed (#12221 by @Balastrong)
+#### Cli now throws an error if both config and no-config arguments are passed (#12221 by @Balastrong)
 
 <!-- prettier-ignore -->
 ```cli
