--- a/changelog_unreleased/javascript/12350.md
+++ b/changelog_unreleased/javascript/12350.md
@@ -1,2 +1,2 @@
 Updated the State of JS Survey Results in order to comply with the 2021 Survey.
-I have removed unused dependecies with depcheck and where applicable, have infered parameter types from usage for type checking. (#12350 by @Harry-Hopkinson)
+I have removed unused dependencies with depcheck and where applicable, have inferred parameter types from usage for type checking. (#12350 by @Harry-Hopkinson)
