--- a/changelog_unreleased/vue/12394.md
+++ b/changelog_unreleased/vue/12394.md
@@ -1,6 +1,6 @@
-#### Allow template lang attribute to be empty string (#12394 by @HallvardMM)
+#### Allow template lang attribute to be empty string or undefined (#12394 by @HallvardMM)
 
-Template tag should allow empty lang=""
+Template tag should allow empty string lang="" or undefined lang
 
 <!-- prettier-ignore -->
 ```vue
@@ -13,6 +13,16 @@ Template tag should allow empty lang=""
   </v-app-bar>
 </template>
 
+<template lang>
+  <v-app-bar>
+    <v-menu offset-y>
+      <template></template>
+    </v-menu>
+  </v-app-bar>
+</template>
+
+
+
 // Prettier stable
 SyntaxError: Unexpected closing tag "v-menu". It may happen when the tag has already been closed by another tag. For more info see https://www.w3.org/TR/html5/syntax.html#closing-elements-that-have-implied-end-tags (5:5)
 [error]   3 |     <v-menu offset-y>
@@ -24,6 +34,14 @@ SyntaxError: Unexpected closing tag "v-menu". It may happen when the tag has alr
 
 // Prettier main
 <template lang="">
+  <v-app-bar>
+    <v-menu offset-y>
+      <template></template>
+    </v-menu>
+  </v-app-bar>
+</template>
+
+<template lang>
   <v-app-bar>
     <v-menu offset-y>
       <template></template>
