--- a/changelog_unreleased/vue/12394.md
+++ b/changelog_unreleased/vue/12394.md
@@ -1,10 +1,10 @@
-#### Allow template lang attribute to be empty string or undefined (#12394 by @HallvardMM)
+#### Allow `lang` attribute of `<template>` to be empty (#12394 by @HallvardMM)
 
 Template tag should allow empty string lang="" or undefined lang
 
 <!-- prettier-ignore -->
 ```vue
-// Input
+<!-- Input -->
 <template lang="">
   <v-app-bar>
     <v-menu offset-y>
@@ -21,9 +21,7 @@ Template tag should allow empty string lang="" or undefined lang
   </v-app-bar>
 </template>
 
-
-
-// Prettier stable
+<!-- Prettier stable -->
 SyntaxError: Unexpected closing tag "v-menu". It may happen when the tag has already been closed by another tag. For more info see https://www.w3.org/TR/html5/syntax.html#closing-elements-that-have-implied-end-tags (5:5)
 [error]   3 |     <v-menu offset-y>
 [error]   4 |       <template></template>
@@ -32,7 +30,7 @@ SyntaxError: Unexpected closing tag "v-menu". It may happen when the tag has alr
 [error]   6 |   </v-app-bar>
 [error]   7 | </template>
 
-// Prettier main
+<!-- Prettier main -->
 <template lang="">
   <v-app-bar>
     <v-menu offset-y>
