--- a/changelog_unreleased/html/6644.md
+++ b/changelog_unreleased/html/6644.md
@@ -1,4 +1,4 @@
-#### Enforce Single Attribute Per Line (#6644 by @kankje)
+#### [HIGHLIGHT]Enforce Single Attribute Per Line (#6644 by @kankje)
 
 Added the `singleAttributePerLine` option for specifying if Prettier should enforce single attribute per line in HTML, Vue and JSX.
 
