--- a/website/blog/2022-03-07-2.6.0.md
+++ b/website/blog/2022-03-07-2.6.0.md
@@ -1,10 +1,16 @@
 ---
 author: "Sosuke Suzuki (@sosukesuzuki)"
 authorURL: "https://github.com/sosukesuzuki"
-title: "Prettier 2.6"
+title: "Prettier 2.6: new singleAttributePerLine option and new JavaScript features!"
 ---
 
-🚧 Write an introduction here.
+This release includes a new `singleAttributePerLine` option. For us, adding a new option was a hard decision.
+
+We've also support formatting for some new ECMAScript proposals via Babel.
+
+If you enjoy Prettier and would like to support our work, consider sponsoring us directly via [our OpenCollective](https://opencollective.com/prettier) or by sponsoring the projects we depend on, including [typescript-eslint](https://opencollective.com/typescript-eslint), [remark](https://opencollective.com/unified), and [Babel](https://opencollective.com/babel).
+
+Please see our previously posted blog [Prettier begins paying maintainers](https://prettier.io/blog/2022/01/06/prettier-begins-paying-maintainers.html) on how we use our funds.
 
 <!--truncate-->
 
