--- a/website/blog/2022-03-13-2.6.0.md
+++ b/website/blog/2022-03-13-2.6.0.md
@@ -698,3 +698,9 @@ $ prettier . --no-plugin-search
 #### Infer parser for `.swcrc` ([#12320](https://github.com/prettier/prettier/pull/12320) by [@sosukesuzuki](https://github.com/sosukesuzuki))
 
 A [`.swcrc`](https://swc.rs/docs/configuration/swcrc) is handled using `json` parser.
+
+### Others
+
+#### Switch to `esbuild` ([#12055](https://github.com/prettier/prettier/pull/12055) by [@fisker](https://github.com/fisker))
+
+We've switched build tool from Rollup to esbuild. It is much faster and has improved our development experience. This is an internal change and will not affect users.
