Update release notes

--- a/changelog_unreleased/mdx/12208.md
+++ b/changelog_unreleased/mdx/12208.md
@@ -1,12 +1,12 @@
 #### Improve MDX multiline ignore support (#12208 by @nickrttn)
 
-Adds support for using Markdown range ignore directives in MDX, using JSX comments.
+Adds support for using Markdown [range ignore](https://prettier.io/docs/en/ignore.html#range-ignore) directives in MDX, using JSX comments.
 
 <!-- prettier-ignore -->
 ```mdx
 {/* prettier-ignore-start */}
 
-const Hello = () => {
+export const Hello = () => {
   return (<p>
   Hello<p>)
 }
