--- a/changelog_unreleased/cli/10274.md
+++ b/changelog_unreleased/cli/10274.md
@@ -1,4 +1,4 @@
-#### Add `--no-plugin-search` to turn off plugin autoloading (#10274 by @fisker)
+#### Add `--no-plugin-search` option to turn off plugin autoloading (#10274 by @fisker)
 
 To turn off plugin autoloading, use `--no-plugin-search` when using Prettier CLI or add `{ pluginSearchDirs: false }` to options in `prettier.format()` or to the config file.
 
