--- a/changelog_unreleased/css/12210.md
+++ b/changelog_unreleased/css/12210.md
@@ -1,6 +1,6 @@
-#### Preserve empty line in CSS paren groups (#12210 by @duailibe)
+#### Preserve blank lines in SCSS maps (#12210 by @duailibe)
 
-<!-- Optional description if it makes sense. -->
+This change also applies to some PostCSS features with similar syntax.
 
 <!-- prettier-ignore -->
 ```css
