--- a/changelog_unreleased/javascript/12276.md
+++ b/changelog_unreleased/javascript/12276.md
@@ -1,6 +1,6 @@
-#### Support destructuring private proposal (#12276 by @sosukesuzuki)
+#### Add support for destructuring of private fields (#12276 by @sosukesuzuki)
 
-Support [Stage 2 TC39 proposal destructuring private fields](https://github.com/tc39/proposal-destructuring-private) via [Babel 7.17](https://babeljs.io/blog/2022/02/02/7.17.0).
+The Stage 2 TC39 proposal for [destructuring of private fields](https://github.com/tc39/proposal-destructuring-private) is now supported via [Babel 7.17](https://babeljs.io/blog/2022/02/02/7.17.0). Please read our [policy on non-standardized syntax](https://prettier.io/docs/en/rationale.html#disclaimer-about-non-standard-syntax) before you decide to use this proposed syntax feature with Prettier.
 
 <!-- prettier-ignore -->
 ```jsx
