--- a/changelog_unreleased/javascript/12299.md
+++ b/changelog_unreleased/javascript/12299.md
@@ -1,6 +1,6 @@
 #### Support decorator auto accessors syntax (#12299 by @sosukesuzuki)
 
-Support auto accessors syntax that is introduced in [new decorators proposal](https://github.com/tc39/proposal-decorators).
+Support auto accessors syntax that is introduced in [new decorators proposal](https://github.com/tc39/proposal-decorators). Please read our [policy on non-standardized syntax](https://prettier.io/docs/en/rationale.html#disclaimer-about-non-standard-syntax) before you decide to use this proposed syntax feature with Prettier.
 
 <!-- prettier-ignore -->
 ```jsx
