--- a/changelog_unreleased/typescript/12351.md
+++ b/changelog_unreleased/typescript/12351.md
@@ -1,6 +1,6 @@
 #### Refactor printing definite assignment assertions (#12351 by @thorn0)
 
-Also now definite assignment assertions are printed even when they aren't followed by type annotations, which is an error in TS but not a parse error.
+Definite assignment assertions are now printed even when they aren't followed by type annotations. This is an error in TypeScript, but TS is still able to parse the file.
 
 <!-- prettier-ignore -->
 ```ts
