--- a/changelog_unreleased/javascript/12268.md
+++ b/changelog_unreleased/javascript/12268.md
@@ -24,7 +24,7 @@ type Props =
   };
 ```
 
-And for TS that comment would not be stable with a second format:
+This change also fixes an issue where a similarly-placed comment in TypeScript would be moved again after a second formatting operation:
 
 <!-- prettier-ignore -->
 ```ts
