--- a/changelog_unreleased/typescript/12400.md
+++ b/changelog_unreleased/typescript/12400.md
@@ -1,3 +1,3 @@
-#### TypeScript 4.6 (#12400 by @dependabot)
+#### TypeScript 4.6 support (#12400 by @dependabot)
 
-We've added support for [TypeScript 4.6](https://devblogs.microsoft.com/typescript/announcing-typescript-4-6/). However, there is no new syntax in this release that Prettier should support.
+We’ve updated the version of TypeScript that we use to parse TS code to [TypeScript 4.6](https://devblogs.microsoft.com/typescript/announcing-typescript-4-6/). However, no new syntax was added in this release of TypeScript so we have not had to make any other changes.
