--- a/website/blog/2022-03-13-2.6.0.md
+++ b/website/blog/2022-03-13-2.6.0.md
@@ -16,6 +16,12 @@ Please see our previously posted blog [Prettier begins paying maintainers](https
 
 ## Highlights
 
+### TypeScript
+
+#### TypeScript 4.6 support ([#12400](https://github.com/prettier/prettier/pull/12400) by [@dependabot](https://github.com/dependabot))
+
+We’ve updated the version of TypeScript that we use to parse TS code to [TypeScript 4.6](https://devblogs.microsoft.com/typescript/announcing-typescript-4-6/). However, no new syntax was added in this release of TypeScript so we have not had to make any other changes.
+
 ### HTML
 
 #### Enforce Single Attribute Per Line ([#6644](https://github.com/prettier/prettier/pull/6644) by [@kankje](https://github.com/kankje))
@@ -469,10 +475,6 @@ type Foo = [
 ];
 
 ```
-
-#### TypeScript 4.6 support ([#12400](https://github.com/prettier/prettier/pull/12400) by [@dependabot](https://github.com/dependabot))
-
-We’ve updated the version of TypeScript that we use to parse TS code to [TypeScript 4.6](https://devblogs.microsoft.com/typescript/announcing-typescript-4-6/). However, no new syntax was added in this release of TypeScript so we have not had to make any other changes.
 
 ### Flow
 
