Updated the image to the new vercel image instead of the Zeit Image.

--- a/website/blog/2017-06-28-1.5.0.md
+++ b/website/blog/2017-06-28-1.5.0.md
@@ -47,7 +47,7 @@ Note that it only supports the open source syntax of GraphQL, therefore doesn't 
 
 ### CSS-in-JS
 
-If you are using [styled-components](https://github.com/styled-components/styled-components) or [styled-jsx](https://github.com/zeit/styled-jsx), prettier will now reformat the CSS inside of your template expressions. Thanks to [@pomber](https://github.com/pomber) for the awesome work!
+If you are using [styled-components](https://github.com/styled-components/styled-components) or [styled-jsx](https://github.com/vercel/styled-jsx), prettier will now reformat the CSS inside of your template expressions. Thanks to [@pomber](https://github.com/pomber) for the awesome work!
 
 <!-- prettier-ignore -->
 ```js
