--- a/website/blog/2019-06-06-1.18.0.md
+++ b/website/blog/2019-06-06-1.18.0.md
@@ -198,7 +198,7 @@ const a = {
 
 #### Add support for styled-jsx external styles ([#6089] by [@hongrich])
 
-Add support for 2 external styles tags in `styled-jsx/css`: `css.global`, and `css.resolve`. https://github.com/zeit/styled-jsx/#external-css-and-styles-outside-of-the-component
+Add support for 2 external styles tags in `styled-jsx/css`: `css.global`, and `css.resolve`. https://github.com/vercel/styled-jsx/#external-css-and-styles-outside-of-the-component
 
 The `css` template tag is already supported by Prettier.
 
