--- a/changelog_unreleased/typescript/12390.md
+++ b/changelog_unreleased/typescript/12390.md
@@ -1,6 +1,6 @@
 #### Print trailing comma for rest elements in tuple types (#12390 by @sosukesuzuki)
 
-TypeScript has allows rest elements in tuple types (`...T`) to have normal elements come after them since [TypeScript 4.2](https://www.typescriptlang.org/docs/handbook/release-notes/typescript-4-2.html#leadingmiddle-rest-elements-in-tuple-types).
+TypeScript has allowed rest elements in tuple types (`...T`) to have normal elements come after them since [TypeScript 4.2](https://www.typescriptlang.org/docs/handbook/release-notes/typescript-4-2.html#leadingmiddle-rest-elements-in-tuple-types).
 Prettier now prints a trailing comma for the trailing rest element (when trailing commas are enabled) for consistency and to reduce diffs if you decide to add more elements after the final element in the future.
 
 <!-- prettier-ignore -->
