--- a/website/blog/2022-03-14-2.6.0.md
+++ b/website/blog/2022-03-14-2.6.0.md
@@ -8,7 +8,7 @@ This release includes a new `singleAttributePerLine` option. This is an option t
 
 We've also added support formatting for some new JavaScript syntax proposals via Babel.
 
-If you enjoy Prettier and would like to support our work, consider sponsoring us directly via [our OpenCollective](https://opencollective.com/prettier) or by sponsoring the projects we depend on, including [typescript-eslint](https://opencollective.com/typescript-eslint), [remark](https://opencollective.com/unified), and [Babel](https://opencollective.com/babel).
+If you enjoy Prettier and would like to support our work, consider sponsoring us directly via [our OpenCollective](https://opencollective.com/prettier) or by sponsoring the projects we depend on, including [typescript-eslint](https://opencollective.com/typescript-eslint), [remark](https://opencollective.com/unified), and [Babel](https://opencollective.com/babel). Also thanks to [LINE](https://line.me/en/) and [Ubie](https://ubie.life/en) for actually sponsoring us! For more information on LINE's OSS sponsoring, please read the blog post [LINE has started to donate to Prettier – why companies should support OSS](https://engineering.linecorp.com/en/blog/support-prettier-and-oss/).
 
 Please see our previously posted blog [Prettier begins paying maintainers](https://prettier.io/blog/2022/01/06/prettier-begins-paying-maintainers.html) on how we use our funds.
 
@@ -432,7 +432,7 @@ let a!;
 
 #### Print trailing comma for rest elements in tuple types ([#12390](https://github.com/prettier/prettier/pull/12390) by [@sosukesuzuki](https://github.com/sosukesuzuki))
 
-TypeScript has allows rest elements in tuple types (`...T`) to have normal elements come after them since [TypeScript 4.2](https://www.typescriptlang.org/docs/handbook/release-notes/typescript-4-2.html#leadingmiddle-rest-elements-in-tuple-types).
+TypeScript has allowed rest elements in tuple types (`...T`) to have normal elements come after them since [TypeScript 4.2](https://www.typescriptlang.org/docs/handbook/release-notes/typescript-4-2.html#leadingmiddle-rest-elements-in-tuple-types).
 Prettier now prints a trailing comma for the trailing rest element (when trailing commas are enabled) for consistency and to reduce diffs if you decide to add more elements after the final element in the future.
 
 <!-- prettier-ignore -->
@@ -701,7 +701,7 @@ $ prettier . --no-plugin-search
 
 A [`.swcrc`](https://swc.rs/docs/configuration/swcrc) is handled using `json` parser.
 
-### Other
+### Misc
 
 #### Switch to `esbuild` ([#12055](https://github.com/prettier/prettier/pull/12055) by [@fisker](https://github.com/fisker))
 
