--- a/website/blog/2022-03-14-2.6.0.md
+++ b/website/blog/2022-03-14-2.6.0.md
@@ -8,7 +8,7 @@ This release includes a new `singleAttributePerLine` option. This is an option t
 
 We've also added support formatting for some new JavaScript syntax proposals via Babel.
 
-If you enjoy Prettier and would like to support our work, consider sponsoring us directly via [our OpenCollective](https://opencollective.com/prettier) or by sponsoring the projects we depend on, including [typescript-eslint](https://opencollective.com/typescript-eslint), [remark](https://opencollective.com/unified), and [Babel](https://opencollective.com/babel). Also thanks to [LINE](https://line.me/en/) and [Ubie](https://ubie.life/en) for actually sponsoring us! For more information on LINE's OSS sponsoring, please read the blog post [LINE has started to donate to Prettier – why companies should support OSS](https://engineering.linecorp.com/en/blog/support-prettier-and-oss/).
+If you enjoy Prettier and would like to support our work, consider sponsoring us directly via [our OpenCollective](https://opencollective.com/prettier) or by sponsoring the projects we depend on, including [typescript-eslint](https://opencollective.com/typescript-eslint), [remark](https://opencollective.com/unified), and [Babel](https://opencollective.com/babel). Also thanks to [LINE](https://line.me/en/) and [Ubie](https://us.ubie.app) for actually sponsoring us! For more information on LINE's OSS sponsoring, please read the blog post [LINE has started to donate to Prettier – why companies should support OSS](https://engineering.linecorp.com/en/blog/support-prettier-and-oss/).
 
 Please see our previously posted blog [Prettier begins paying maintainers](https://prettier.io/blog/2022/01/06/prettier-begins-paying-maintainers.html) on how we use our funds.
 
@@ -412,6 +412,30 @@ class C extends HTMLElement {
 }
 ```
 
+#### Fix idempotence issues caused by line comments after `=` in assignments ([#12349](https://github.com/prettier/prettier/pull/12349) by [@thorn0](https://github.com/thorn0))
+
+<!-- prettier-ignore -->
+```jsx
+// Input
+const kochabCooieGameOnOboleUnweave = // !!!
+  rhubarbRhubarb(annularCooeedSplicesWalksWayWay);
+
+// Prettier 2.5, first format
+const kochabCooieGameOnOboleUnweave = rhubarbRhubarb( // !!!
+  annularCooeedSplicesWalksWayWay
+);
+
+// Prettier 2.5, second format
+const kochabCooieGameOnOboleUnweave = rhubarbRhubarb(
+  // !!!
+  annularCooeedSplicesWalksWayWay
+);
+
+// Prettier 2.6
+const kochabCooieGameOnOboleUnweave = // !!!
+  rhubarbRhubarb(annularCooeedSplicesWalksWayWay);
+```
+
 ### TypeScript
 
 #### Refactor printing definite assignment assertions ([#12351](https://github.com/prettier/prettier/pull/12351) by [@thorn0](https://github.com/thorn0))
@@ -533,6 +557,34 @@ $colours: (
 );
 ```
 
+#### Fix lowercasing postcss values ([#12393](https://github.com/prettier/prettier/pull/12393) by [@niklasvatn](https://github.com/niklasvatn))
+
+PostCSS values can start with digits. Prettier interprets this as a number followed by a unit in the example below.
+
+<!-- prettier-ignore -->
+```css
+// Input
+@value 4XLarge 28/36px;
+
+.test {
+  font: 4XLarge Helvetica;
+}
+
+// Prettier 2.5
+@value 4XLarge 28/36px;
+
+.test {
+  font: 4xlarge Helvetica;
+}
+
+// Prettier 2.6
+@value 4XLarge 28/36px;
+
+.test {
+  font: 4XLarge Helvetica;
+}
+```
+
 ### SCSS
 
 #### Fix comments inside map ([#11920](https://github.com/prettier/prettier/pull/11920) by [@fisker](https://github.com/fisker))
@@ -611,6 +663,56 @@ $colours: (
     <div v-for=" a in ">aaaaa</div>
   </div>
 </template>;
+```
+
+#### Allow `lang` attribute of `<template>` to be empty ([#12394](https://github.com/prettier/prettier/pull/12394) by [@HallvardMM](https://github.com/HallvardMM))
+
+Template tag should allow empty string lang="" or undefined lang
+
+<!-- prettier-ignore -->
+```vue
+<!-- Input -->
+<template lang="">
+  <v-app-bar>
+    <v-menu offset-y>
+      <template></template>
+    </v-menu>
+  </v-app-bar>
+</template>
+
+<template lang>
+  <v-app-bar>
+    <v-menu offset-y>
+      <template></template>
+    </v-menu>
+  </v-app-bar>
+</template>
+
+<!-- Prettier 2.5 -->
+SyntaxError: Unexpected closing tag "v-menu". It may happen when the tag has already been closed by another tag. For more info see https://www.w3.org/TR/html5/syntax.html#closing-elements-that-have-implied-end-tags (5:5)
+[error]   3 |     <v-menu offset-y>
+[error]   4 |       <template></template>
+[error] > 5 |     </v-menu>
+[error]     |     ^^^^^^^^^
+[error]   6 |   </v-app-bar>
+[error]   7 | </template>
+
+<!-- Prettier 2.6 -->
+<template lang="">
+  <v-app-bar>
+    <v-menu offset-y>
+      <template></template>
+    </v-menu>
+  </v-app-bar>
+</template>
+
+<template lang>
+  <v-app-bar>
+    <v-menu offset-y>
+      <template></template>
+    </v-menu>
+  </v-app-bar>
+</template>
 ```
 
 ### Ember / Handlebars
