--- a/changelog_unreleased/javascript/12017.md
+++ b/changelog_unreleased/javascript/12017.md
@@ -1,4 +1,4 @@
-#### Preserve end-of-line comment for if statements without blocks (#12017 by @sosukesuzuki)
+#### Preserve end-of-line comments after if statements without blocks (#12017 by @sosukesuzuki)
 
 <!-- prettier-ignore -->
 ```jsx
