--- a/changelog_unreleased/javascript/12075.md
+++ b/changelog_unreleased/javascript/12075.md
@@ -1,6 +1,4 @@
-#### Print end-of-line comment for `continue`/`break` statements (#12075 by @sosukesuzuki)
-
-<!-- Optional description if it makes sense. -->
+#### Print end-of-line comments for `continue`/`break` statements (#12075 by @sosukesuzuki)
 
 <!-- prettier-ignore -->
 ```jsx
