--- a/website/blog/2022-03-14-2.6.0.md
+++ b/website/blog/2022-03-14-2.6.0.md
@@ -113,7 +113,7 @@ test("foo bar", waitForAsync(() => {
 }));
 ```
 
-#### Preserve end-of-line comment for if statements without blocks ([#12017](https://github.com/prettier/prettier/pull/12017) by [@sosukesuzuki](https://github.com/sosukesuzuki))
+#### Preserve end-of-line comments after if statements without blocks ([#12017](https://github.com/prettier/prettier/pull/12017) by [@sosukesuzuki](https://github.com/sosukesuzuki))
 
 <!-- prettier-ignore -->
 ```jsx
@@ -154,9 +154,7 @@ let foo: // comment
 never;
 ```
 
-#### Print end-of-line comment for `continue`/`break` statements ([#12075](https://github.com/prettier/prettier/pull/12075) by [@sosukesuzuki](https://github.com/sosukesuzuki))
-
-<!-- Optional description if it makes sense. -->
+#### Print end-of-line comments for `continue`/`break` statements ([#12075](https://github.com/prettier/prettier/pull/12075) by [@sosukesuzuki](https://github.com/sosukesuzuki))
 
 <!-- prettier-ignore -->
 ```jsx
@@ -819,7 +817,7 @@ $ prettier . --no-plugin-search
 
 A [`.swcrc`](https://swc.rs/docs/configuration/swcrc) is handled using `json` parser.
 
-### Misc
+### Miscellaneous
 
 #### Switch to `esbuild` ([#12055](https://github.com/prettier/prettier/pull/12055) by [@fisker](https://github.com/fisker))
 
