--- a/changelog_unreleased/cli/12477.md
+++ b/changelog_unreleased/cli/12477.md
@@ -3,12 +3,10 @@
 <!-- prettier-ignore -->
 ```bash
 # Prettier stable
-prettier --loglevel silent --help no-color
+prettier --loglevel silent --find-config-path index.js
 # Nothing printed
 
 // Prettier main
 prettier --loglevel silent --help no-color
-#--no-color
-#
-#  Do not colorize error messages.
+# .prettierrc
 ```
