--- a/changelog_unreleased/cli/12477.md
+++ b/changelog_unreleased/cli/12477.md
@@ -1,4 +1,4 @@
-#### Ignore `loglevel` when printing information
+#### Ignore `loglevel` when printing information (#12477 by @fisker)
 
 <!-- prettier-ignore -->
 ```bash
