[skip ci] Fix changelog

--- a/changelog_unreleased/cli/12477.md
+++ b/changelog_unreleased/cli/12477.md
@@ -6,7 +6,7 @@
 prettier --loglevel silent --find-config-path index.js
 # Nothing printed
 
-// Prettier main
+# Prettier main
 prettier --loglevel silent --help no-color
 # .prettierrc
 ```
