Minor tweak to the blog post (#12473)
Co-authored-by: Sosuke Suzuki <aosukeke@gmail.com>

--- a/website/blog/2022-03-16-2.6.0.md
+++ b/website/blog/2022-03-16-2.6.0.md
@@ -817,7 +817,7 @@ $ prettier . --no-plugin-search
 
 #### Infer parser for `.swcrc` ([#12320](https://github.com/prettier/prettier/pull/12320) by [@sosukesuzuki](https://github.com/sosukesuzuki))
 
-A [`.swcrc`](https://swc.rs/docs/configuration/swcrc) is handled using `json` parser.
+Format the [`.swcrc`](https://swc.rs/docs/configuration/swcrc) file as a JSON file.
 
 ### Miscellaneous
 
