--- a/changelog_unreleased/misc/12485.md
+++ b/changelog_unreleased/misc/12485.md
@@ -2,5 +2,5 @@
 
 Fixes two problems when bundling our UMD files with webpack:
 
-- A error `` `....__exportStar` is not a function`` throws when running the bundles.
+- A error `` "`....__exportStar` is not a function" `` throws when running the bundles.
 - Some files cause warning about `"Critical dependency: the request of a dependency is an expression"`.
