--- a/changelog_unreleased/misc/12485.md
+++ b/changelog_unreleased/misc/12485.md
@@ -1,3 +1,6 @@
-#### Make artifact friendly for `webpack` (#12485 by @fisker)
+#### Make artifact friendly for webpack (#12485, #12511 by @fisker)
 
-Previously, when bundling our UMD files `standalone.js`, `parser-typescript.js`, `webpack` warn about "Critical dependency: the request of a dependency is an expression", now this is fixed.
+Fixes two problems when bundling our UMD files with webpack:
+
+- A error `` "`....__exportStar` is not a function" `` throws when running the bundles.
+- Some files cause warning about `"Critical dependency: the request of a dependency is an expression"`.
