Update changelog file

--- a/changelog_unreleased/mdx/12208.md
+++ b/changelog_unreleased/mdx/12208.md
@@ -1,14 +1,49 @@
-#### Improve MDX multiline ignore support (#12208 by @nickrttn)
+#### Improve MDX range ignore support (#12208 by @nickrttn)
 
 Adds support for using Markdown [range ignore](https://prettier.io/docs/en/ignore.html#range-ignore) directives in MDX, using JSX comments.
 
 <!-- prettier-ignore -->
 ```mdx
+// Input
+
 {/* prettier-ignore-start */}
 
 export const Hello = () => {
   return (<p>
-  Hello<p>)
+  Hello</p>)
+}
+
+{/* prettier-ignore-end */}
+
+// Prettier stable (throws an error)
+
+k@https://prettier.io/lib/standalone.js:7:18850
+S@https://prettier.io/lib/standalone.js:7:18770
+k@https://prettier.io/lib/standalone.js:7:18839
+S@https://prettier.io/lib/standalone.js:7:18770
+k@https://prettier.io/lib/standalone.js:7:18839
+S@https://prettier.io/lib/standalone.js:7:18770
+l@https://prettier.io/lib/standalone.js:7:18716
+I@https://prettier.io/lib/standalone.js:7:21775
+G@https://prettier.io/lib/standalone.js:97:3694
+h@https://prettier.io/lib/standalone.js:41:11604
+b@https://prettier.io/lib/standalone.js:41:11128
+A@https://prettier.io/lib/standalone.js:41:10958
+c@https://prettier.io/lib/standalone.js:41:10868
+b@https://prettier.io/lib/standalone.js:41:15183
+D@https://prettier.io/lib/standalone.js:45:576
+St/<@https://prettier.io/lib/standalone.js:115:7299
+formatCode@https://prettier.io/worker.js:141:21
+handleMessage@https://prettier.io/worker.js:78:36
+self.onmessage@https://prettier.io/worker.js:36:14
+
+// Prettier main
+
+{/* prettier-ignore-start */}
+
+export const Hello = () => {
+  return (<p>
+  Hello</p>)
 }
 
 {/* prettier-ignore-end */}
